flapivor/tests/m3/hopix/typechecker/good/21-record-01.hopix
type P = { x : Int; y : Int }
val x : P = { x = 0; y = 1 }<>