flapivor/tests/m3/hopix/typechecker/bad/27-record-01.hopix
val x : T = { l = 0 }<>